# magick_mind/resources/v1/__init__.py
@@ -6,8 +6,7 @@ from magick_mind.resources.v1.blueprint import BlueprintResourceV1
 from magick_mind.resources.v1.corpus import CorpusResourceV1
 from magick_mind.resources.v1.chat import ChatResourceV1
 from magick_mind.resources.v1.end_user import EndUserResourceV1
-from magick_mind.resources.v1.magickspaces import MagickspacesResourceV1
-from magick_mind.resources.v1.mindspace import MindspaceResourceV1
+from magick_mind.resources.v1.magickspaces import MagickSpacesResourceV1
 from magick_mind.resources.v1.persona import PersonaResourceV1
 from magick_mind.resources.v1.project import ProjectResourceV1
 from magick_mind.resources.v1.runtime import RuntimeResourceV1
@@ -20,8 +19,7 @@ __all__ = [
     "CorpusResourceV1",
     "ChatResourceV1",
     "EndUserResourceV1",
-    "MagickspacesResourceV1",
-    "MindspaceResourceV1",
+    "MagickSpacesResourceV1",
     "PersonaResourceV1",
     "ProjectResourceV1",
     "RuntimeResourceV1",
